# APSC_project

./: README.md  run_experiments.py  run_tests.py  setup.cfg  test.ipynb  test.py
bayesian_network/: base_network.ipynb  darcy_flow.ipynb
bayesian_network/.ipynb_checkpoints/: darcy_flow-checkpoint.ipynb
bayesian_network/dlroms/: bayesian.py
bayesian_network/snapshots/: K.npy  p.npy  p_1000.npy  u_x.npy  u_y.npy  u_y_1000.npy
brain_damage/: brain-damage-recovery-data-generation.ipynb  brain-damage-recovery-multi-fidelity.ipynb  brain-damage-recovery.ipynb
brain_damage/brain-meshes/: brain-mesh10.xml  brain-mesh25.xml
config/: experiments.yml
dlroms/: bayesian.py  dnns.py
dlroms_bayesian/: bayesian.py  svgd.py
experiments/advection_diffusion/: advection_diffusion_high_fidelity.py  advection_diffusion_multi_fidelity.py  advection_diffusion_multi_fidelity_init.py  advection_diffusion_snapshots.py  high_fidelity.ipynb  multi_fidelity.ipynb  multi_fidelity_initialization.ipynb
experiments/brain_damage_recovery/: brain_damage_recovery.ipynb  brain_damage_recovery.py  brain_damage_recovery_bayesian.ipynb  brain_damage_recovery_bayesian.py  brain_damage_recovery_bayesian_evaluate.py  brain_damage_recovery_bayesian_reliability.py  brain_damage_recovery_evaluate.py  geogp.py  (+1 more)
model_problem/: high-fidelity-dlrom-combined.ipynb  high-fidelity-dlrom.ipynb  mesh-informed-layer-initialization.ipynb  multi-fidelity-dlrom.ipynb  test.py
tests/: DL-ROM-reti-neurali.py  DL-ROMs-spazi-elementi-finiti.py  test_bayes.py  test_expansions.py  test_svgd.py  test_utils.py
(+94 files in other folders)
