[metadata]
name = dlroms_bayesian
version = 0.0.1
author = Francesca Bettinelli
author_email = francesca.bettinelli@mail.polimi.it
description = Bayesian extension of the DLROMs package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FraBet29/APSC_project/

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
